step-ca/step-ca-ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: step-ca-ingress
  namespace: ca
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ca.example.org`)
      kind: Rule
      services:
        - name: step-ca-step-certificates
          port: 443
          scheme: https
          serversTransport: step-ca-insecure
