step-ca/step-ca-tls-passthrough.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: step-ca-passthrough
  namespace: ca
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostSNI(`ca.example.org`)
      services:
        - name: step-ca-step-certificates
          port: 443
  tls:
    passthrough: true
